# stellaris-machine-robot-expansion

./: .gitignore  BUILD.md  BUILD_NOTES.md  Files that need to be changed when adding a UI element in a Custom GUI.txt  OVERWRITES.md  descriptions-chinese.md  descriptions-chinese.txt  descriptions.txt  descriptor.mod  pytest.ini  readme.md  run_leader_triggers.sh  run_pipeline.sh  workshop_description.txt
documentation/: oxr_mdlc_world_machine_tech_tree.dot  oxr_mdlc_world_machine_tech_tree_v2.dot  world_machine_lore.md
events/: 0xR_mdlc_events.txt  desktop.ini  oxr_mdlc_councilor_editor_events.txt  oxr_mdlc_events.txt  oxr_mdlc_events_civics.txt  oxr_mdlc_events_game_start.txt  oxr_mdlc_events_machine_pop_growth_helper.txt  oxr_mdlc_events_main.txt  oxr_mdlc_events_mamp.txt  oxr_mdlc_events_origin_null_main.txt  oxr_mdlc_events_origin_world_machine_archaeology.txt  oxr_mdlc_events_origin_world_machine_main.txt  oxr_mdlc_events_origin_world_machine_on_actions.txt  oxr_mdlc_events_synth_start.txt  oxr_mdlc_synth_main.txt  rikk_mdlc_events.txt  rikk_mdlc_events__world_machine_upgrades.txt  rikk_mdlc_events_encrypted.txt  rikk_mdlc_events_extended.txt  (+18 more)
mrec_tools/other_code_generators/compulsory_consolidators/: OXR_CONSOLIDATORS_README.md  SCRIPTS.md  pyproject.toml
mrec_tools/other_code_generators/compulsory_consolidators/src/oxr_consolidators/: consolidators_utils.py  deposits_categories.json  main.py  make_extraction_event_3000.py  make_extractor_effects.py  make_extractor_special_projects.py  make_filler_deposits.py  make_orbital_planetary_deposit_triggers.py
(+2794 files in other folders)
