[project]
name = "Compulsory_Consolidators_Effects_Code_MRE_C"
version = "0.0.1"
authors = [
  { name="Openly Retro", email="3236094+openly-retro@users.noreply.github.com" },
]
description = "Code to build scripted effects and other files for the civic"
readme = "OXR_CONSOLIDATORS_README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/openly-retro/stellaris-machine-robot-expansion"
Issues = "https://github.com/openly-retro/stellaris-machine-robot-expansion/issues"